--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
 <body>
     <!-- Navigation -->
     <header>
-        <div class="logo">Iram Marion</div>
+        <div class="logo">Ujwol Shakya</div>
         <nav>
             <ul>
                 <li><a href="#home">Home</a></li>
@@ -485,13 +485,13 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Hi, I'm <span>Iram Marion</span><br>Web Designer</h1>
+            <h1>Hi, I'm <span>Ujwol Shakya</span><br>Web Designer</h1>
             <p>I create beautiful, functional websites that help businesses grow and make an impact. With a focus on user experience and modern design trends.</p>
             <a href="#projects" class="btn">View My Work</a>
         </div>
         <div class="hero-image">
             <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=328&q=80" 
-                 alt="Iram Marion" 
+                 alt="Ujwol Shakya" 
                  class="profile-pic">
         </div>
     </section>
@@ -599,21 +599,21 @@
                             <i class="fas fa-envelope"></i>
                             <div>
                                 <h4>Email</h4>
-                                <p>iram@example.com</p>
+                                <p>ujwolshakya100@gmail.com</p>
                             </div>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-phone"></i>
                             <div>
                                 <h4>Phone</h4>
-                                <p>+1 (555) 123-4567</p>
+                                <p>9767234456</p>
                             </div>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
                             <div>
                                 <h4>Location</h4>
-                                <p>San Francisco, CA</p>
+                                <p>Srijanagar,Bhaktapur</p>
                             </div>
                         </div>
                     </div>
@@ -646,7 +646,7 @@
             <a href="#"><i class="fab fa-linkedin-in"></i></a>
             <a href="#"><i class="fab fa-github"></i></a>
         </div>
-        <p class="copyright">© 2023 Iram Marion. All rights reserved.</p>
+        <p class="copyright">© 2023 Ujwol Shakya. All rights reserved.</p>
     </footer>
 
     <script>
